# neuroloom-claude-plugin

./: .gitignore  .mcp.json  README.md  pyproject.toml  run_hook.py
.claude-plugin/: plugin.json
.github/workflows/: dispatch-mcp-rebuild.yml  test.yml
hooks/: hooks.json
lib/: config.sh  trace.sh
pyhooks/: cache_prefetch.py  capture.py  code_graph_sync.py  config.py  db.py  http.py  preload_context.py  session_start.py  trace.py
scripts/: capture.sh  code-graph-sync.sh  ensure-venv.sh  inject-context.sh  preload-context.sh  preload_context.py  seed_code_graph.py  summarize.sh  sync_file.py
skills/init/: SKILL.md
skills/status/: SKILL.md
tests/: capture.bats  conftest.py  inject-context.bats  summarize.bats  test_capture.py  test_code_graph_sync.py  test_config.py  test_db.py  test_http.py  test_preload_context.py  test_run_hook.py  test_session_start.py  trace.bats
tests/fixtures/: tool_event_bash.json  tool_event_mcp.json  tool_event_name_keyed.json  tool_event_write.json
tests/integration/: conftest.py  test_lifecycle.py  test_performance.py
