[project]
name = "neuroloom-hooks"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest", "pytest-cov"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pyhooks*"]
